--- a/views/igra.html
+++ b/views/igra.html
@@ -20,15 +20,16 @@
 </tr>
 <tr>
     <td>
-        <img src="../img/{{igra.stevilo_napak()}}.jpg"  alt="OBESANJE">
+        <img src="../../img/{{igra.stevilo_napak()}}.jpg"  alt="OBESANJE">
     </td>
 </tr>
   </table>
 
  
 
-  <form action="/igra/" method="post">
-    <button type="submit">Nova igra</button>
+  <form action="/igra{{id_igre}}/" method="post">
+    Črke: <input type = "text" name="crka">
+    <button type="submit">Pošlji ugib</button>
   </form>
 </body>
 
