--- a/views/igra.html
+++ b/views/igra.html
@@ -27,7 +27,7 @@
 
  
 
-  <form action="/igra{{id_igre}}/" method="post">
+  <form action="/igra/{{id_igre}}/" method="post">
     Črke: <input type = "text" name="crka">
     <button type="submit">Pošlji ugib</button>
   </form>
